--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 :root {
 margin: 0;
 padding: 0 50px;
-margin-top: 20px;
+padding-top: 20px;
 box-sizing: border-box;
 background-color: #f5ecdd;
 }
